<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.tc</groupId>
  <artifactId>MaximSerafimov</artifactId>
  <version>2021.08.05-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
    <testng.suite.file>${testng.configs.path}/test.AddAndSubtractOperations.xml</testng.suite.file>

    <testng.version>7.4.0</testng.version>
    <assertj-core.version>3.20.2</assertj-core.version>
    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
    <checkstyle.version>8.42</checkstyle.version>
    <selenium-java.version>3.141.59</selenium-java.version>
    <slf4j-simple.version>1.7.30</slf4j-simple.version>
    <aspectj.version>1.9.5</aspectj.version>
    <webdrivermanager.version>4.4.3</webdrivermanager.version>
    <allure-testng.version>2.14.0</allure-testng.version>
    <allure-maven.version>2.10.0</allure-maven.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>add-and-subtract-operations-tests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.AddAndSubtractOperations.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>multiply-and-divide-operations-tests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.MultiplyAndDivideOperations.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>all-tests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.all.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>github-page-test-ex1-ex2-tests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.GithubPageSeleniumEx1Ex2</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>page-object-tests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.PageObject.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>page-object-allure-tests</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/test.PageObjectAllure.xml</testng.suite.file>
      </properties>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j-simple.version}</version>
    </dependency>
    <dependency>
      <groupId>calculator</groupId>
      <artifactId>calculatorapp</artifactId>
      <scope>system</scope>
      <version>1.0</version>
      <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-java.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure-testng.version}</version>
    </dependency>
  </dependencies>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>${allure-maven.version}</version>
        <configuration>
          <reportVersion>${allure-testng.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>